[package]
name = "wgconfig-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
rust-crypto = { version = "0.2.36" }
tokio = { version = "1.10.0", features = ["full"] }
