[package]
name = "wgconfig-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5.4" }
reqwest = { version = "0.11.4", features = ["json"] }
rust-crypto = { version = "0.2.36" }
serde_json = { version = "1.0.66" }
tokio = { version = "1.10.0", features = ["full"] }
